Change vite scripts

--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "dist/main.js",
   "types": "dist/main.d.ts",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
+    "dev": "vite --host",
+    "build": "tsc && vite build",
     "preview": "vite preview"
   },
   "devDependencies": {
